--- a/roles/java/vars/main.yml
+++ b/roles/java/vars/main.yml
@@ -7,5 +7,5 @@ java_packages:
   - "oracle-java{{ java_version }}-installer"
   - "oracle-java{{ java_version }}-set-default"
 java_repositories:
-  - 'deb http://ppa.launchpad.net/webupd8team/java/ubuntu precise main'
-  - 'deb-src http://ppa.launchpad.net/webupd8team/java/ubuntu precise main'
+  - 'deb http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main'
+  - 'deb-src http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main'
