--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     ports:
       - "2221:22"
     networks:
-      - mycluster
+      mynet:
+        ipv4_address: 192.168.33.10
 
   node2:
     image: gkrlodebian
@@ -16,7 +17,8 @@ services:
     ports:
       - "2222:22"
     networks:
-      - mycluster
+      mynet:
+        ipv4_address: 192.168.33.11
 
   node3:
     image: gkrlodebian
@@ -24,16 +26,21 @@ services:
     ports:
       - "2223:22"
     networks:
-      - mycluster
+      mynet:
+        ipv4_address: 192.168.33.12
 
   node4:
     image: gkrlodebian
     hostname: node4
     ports:
-      - "2224:22"
+      "2224:22"
     networks:
-      - mycluster
+      mynet:
+        ipv4_address: 192.168.33.13
 
 networks:
-  mycluster:
+  mynet:
     driver: bridge
+    ipam:
+      config:
+      - subnet: 192.168.33.0/24
