--- a/playbooks/hadoop_cluster.yml
+++ b/playbooks/hadoop_cluster.yml
@@ -7,8 +7,7 @@
 - hosts: hadoop
   become: yes
   roles:
-    - tools
-    - java
+    - requirements
     - hadoop_core
 
 - hosts: namenode, datanode
