--- a/roles/hadoop_core/defaults/main.yml
+++ b/roles/hadoop_core/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 hadoop_version: 2.8.0
+hadoop_user: hadoop
 hadoop_home: "/opt/hadoop-{{ hadoop_version }}"
 hadoop_namenode_dir: "{{ hadoop_home }}/hdfs/namenode"
 hadoop_namesecondary_dir: "{{ hadoop_home }}/hdfs/namesecondary"
