--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 executable = /bin/bash
 host_key_checking = False
-inventory = inventory/vagrant
+inventory = inventory/odroids
 roles_path = roles
