--- a/roles/zookeeper/tasks/main.yml
+++ b/roles/zookeeper/tasks/main.yml
@@ -1,37 +1,3 @@
 ---
-- name: Zookeper | Download package
-  get_url:
-    url: "{{ zookeeper_url }}-{{ zookeeper_version }}.tar.gz"
-    dest: /tmp/
-    remote_src: yes
-    validate_certs: no
-
-- name: Zookeeper | Ensure ZK folder exists
-  file:
-    path: "{{ item }}"
-    state: directory
-  with_items:
-    - "{{ zookeeper_datadir }}"
-    - "{{ zookeeper_logdir }}"
-
-- name: Zookeeper | Unzip Zk tar
-  unarchive:
-    src: "/tmp/zookeeper-{{ zookeeper_version }}.tar.gz"
-    dest: "/opt/"
-    copy: no
-
-- name: Zookeeper | Overwrite zoo.conf
-  template:
-    src: zoo.cfg.j2
-    dest: "{{ zookeeper_install_dir }}/conf/zoo.cfg"
-    force: yes
-  notify:
-    - Zookeeper | restart zookeeper
-
-- name: Zookeeper | Overwrite myid
-  template:
-    src: myid.j2
-    dest: "{{ zookeeper_datadir }}/myid"
-    force: yes
-  notify:
-    - Zookeeper | restart zookeeper
+- include: zookeeper.yml
+  when: inventory_hostname in zookeeper_hosts
