--- a/roles/hadoop/defaults/main.yml
+++ b/roles/hadoop/defaults/main.yml
@@ -1,4 +1,10 @@
 ---
+# Hadoop hosts machines
+datanode_hosts: [ node2, node3, node4 ]
+namenode_hosts: [ node1, node1 ] #[namenode, secondnamenode]
+resourcemanager_host: node1
+
+# Configuration
 hadoop_version: 2.8.0
 hadoop_user: hadoop
 hadoop_home: "/opt/hadoop-{{ hadoop_version }}"
@@ -15,3 +21,6 @@ hadoop_env_vars:
   - { prefix: "export HADOOP_HDFS_HOME", sufix: "=$HADOOP_HOME" }
   - { prefix: "export YARN_HOME", sufix: "=$HADOOP_HOME" }
   - { prefix: "export PATH=$PATH:$HADOOP_HOME/bin", sufix: ""}
+
+
+
