--- a/roles/hadoop/tasks/core.yml
+++ b/roles/hadoop/tasks/core.yml
@@ -1,11 +1,11 @@
 ---
 # Download (only if not downloaded yet) & Install
-- name: Hadoop | Verify zip is already downloaded
+- name: Verify tar.gz is already downloaded
   stat:
     path: "/tmp/hadoop-{{ hadoop_version }}.tar.gz"
   register: st_hadoop_downloaded
 
-- name: Hadoop | Download hadoop
+- name: Download hadoop
   get_url:
     url: "{{ hadoop_download_url }}"
     dest: /tmp/
@@ -13,7 +13,7 @@
     validate_certs: no
   when: st_hadoop_downloaded.stat.exists == False
 
-- name: Hadoop | Unzip hadoop package
+- name: Unzip hadoop package
   unarchive:
     src: "/tmp/hadoop-{{ hadoop_version }}.tar.gz"
     dest: /opt/
@@ -23,14 +23,14 @@
 
 
 # Set envs variables in ~/.bashrc & profile
-- name: Hadoop | Remove hadoop env vars
+- name: HRemove hadoop env vars
   lineinfile:
     path: "/home/{{ hadoop_user }}/.bashrc"
     regexp: "^{{item['prefix']}}"
     state: absent
   with_items: "{{ hadoop_env_vars }}"
 
-- name: Hadoop | Add hadoop envs ~/.bashrc
+- name: Add hadoop envs ~/.bashrc
   lineinfile:
     path: "/home/{{ hadoop_user }}/.bashrc"
     line: "{{ item['prefix']+item['sufix'] }}"
@@ -38,19 +38,19 @@
     state: present
   with_items: "{{ hadoop_env_vars }}"
 
-- name: Hadoop | Add hadoop envs /etc/profile
+- name: Add hadoop envs /etc/profile
   shell: "cp /home/{{ hadoop_user }}/.bashrc /etc/profile"
   args:
     executable: /bin/bash
 
-- name: Hadoop | Add hadoop envs ~/.profile
+- name: Add hadoop envs ~/.profile
   shell: "cp /home/{{ hadoop_user }}/.bashrc ~/.profile"
   args:
     executable: /bin/bash
 
 
 # Config files
-- name: Hadoop | Remove JAVA_HOME in hadoop-env
+- name: Remove JAVA_HOME in hadoop-env
   lineinfile:
     path: "{{ hadoop_home }}/etc/hadoop/hadoop-env.sh"
     regexp: "^{{ item['prefix'] }}"
@@ -58,7 +58,7 @@
   with_items: 
     - "{{ hadoop_env_vars[0] }}"
 
-- name: Hadoop | Set JAVA_HOME in hadoop-env
+- name: Set JAVA_HOME in hadoop-env
   lineinfile:
     path: "{{ hadoop_home }}/etc/hadoop/hadoop-env.sh"
     line: "{{ item['prefix'] + item['sufix'] }}"
@@ -67,26 +67,66 @@
   with_items: 
     - "{{ hadoop_env_vars[0] }}"
   
-- name: Hadoop | Overwrite core-site.xml
+- name: Overwrite core-site.xml
   template:
     src: core-site.xml.j2
     dest: "{{ hadoop_home }}/etc/hadoop/core-site.xml"
     force: yes
 
-- name: Hadoop | Overwrite hdfs-site.xml
+- name: Overwrite hdfs-site.xml
   template:
     src: hdfs-site.xml.j2
     dest: "{{ hadoop_home }}/etc/hadoop/hdfs-site.xml"
     force: yes
 
-- name: Hadoop | Overwrite mapred-site.xml
+- name: Overwrite mapred-site.xml
   template:
     src: mapred-site.xml.j2
     dest: "{{ hadoop_home }}/etc/hadoop/mapred-site.xml"
     force: yes
 
-- name: Hadoop | Overwrite yarn-site.xml
+- name: Overwrite yarn-site.xml
   template:
     src: yarn-site.xml.j2
     dest: "{{ hadoop_home }}/etc/hadoop/yarn-site.xml"
     force: yes
+
+# Folders
+- name: Verify the namenode dir
+  stat:
+    path: "{{ hadoop_namenode_dir }}"
+  register: st_namenode_dir
+
+- name: Create namenode dir
+  file:
+    path: "{{ hadoop_namenode_dir }}"
+    state: directory
+    group: "{{ hadoop_user }}"
+    owner: "{{ hadoop_user }}"
+  when: st_namenode_dir.stat.exists == False
+
+- name: Verify the namesecondary dir
+  stat:
+    path: "{{ hadoop_namesecondary_dir }}"
+  register: st_namesecondary_dir
+
+- name: Create namesecondary dir
+  file:
+    path: "{{ hadoop_namesecondary_dir }}"
+    state: directory
+    group: "{{ hadoop_user }}"
+    owner: "{{ hadoop_user }}"
+  when: st_namesecondary_dir.stat.exists == False
+
+- name: HVerify the datanode dir
+  stat:
+    path: "{{ hadoop_datanode_dir }}"
+  register: st_datanode_dir
+
+- name: Create datanode dir
+  file:
+    path: "{{ hadoop_datanode_dir }}"
+    state: directory
+    group: "{{ hadoop_user }}"
+    owner: "{{ hadoop_user }}"
+  when: st_datanode_dir.stat.exists == False 
