--- a/roles/zookeeper/defaults/main.yml
+++ b/roles/zookeeper/defaults/main.yml
@@ -1,3 +1,6 @@
+#Zookkeeper hosts
+zookeeper_hosts: [ node1 ]
+
 #Zookeper vars
 zookeeper_url: http://ftp.cixug.es/apache/zookeeper/current/zookeeper
 zookeeper_version: 3.4.10
@@ -8,3 +11,4 @@ zookeeper_clientport: 2181
 zookeeper_initlimit: 5
 zookeeper_synclimit: 2
 zookeeper_install_dir: /opt/zookeeper-{{ zookeeper_version }}
+
