--- a/roles/requirements/tasks/main.yml
+++ b/roles/requirements/tasks/main.yml
@@ -10,6 +10,7 @@
     - wget
     - tar
     - unzip
+    - rsync
   tags:
     - requirements
 
@@ -44,6 +45,8 @@
 
 
 # Pre-configuration
+# Docker dont let you modify etc/hosts. For containers
+# run the playbook with --skip-tags "no_docker"
 - name: Remove similar IPs in hosts file
   lineinfile:
     dest: /etc/hosts
@@ -53,6 +56,7 @@
   with_items: "{{ groups['nodes'] }}"
   tags:
     - requirements
+    - no_docker
 
 - name: Add host in hosts file
   lineinfile:
@@ -64,6 +68,7 @@
   with_items: "{{ groups['nodes'] }}"
   tags:
     - requirements
+    - no_docker
 
 - name: Fetch all public ssh keys
   shell: cat /home/{{ hadoop_user }}/.ssh/id_rsa.pub
