--- a/roles/hadoop/tasks/core.yml
+++ b/roles/hadoop/tasks/core.yml
@@ -2,20 +2,20 @@
 # Download (only if not downloaded yet) & Install
 - name: Hadoop | Verify tar.gz is already downloaded
   stat:
-    path: "/tmp/hadoop-{{ hadoop_version }}.tar.gz"
+    path: "/home/{{ hadoop_user }}/hadoop-{{ hadoop_version }}.tar.gz"
   register: st_hadoop_downloaded
 
 - name: Hadoop | Download hadoop
   get_url:
     url: "{{ hadoop_download_url }}"
-    dest: /tmp/
+    dest: /home/{{ hadoop_user }}/
     remote_src: yes
     validate_certs: no
   when: st_hadoop_downloaded.stat.exists == False
 
 - name: Hadoop | Unzip hadoop package
   unarchive:
-    src: "/tmp/hadoop-{{ hadoop_version }}.tar.gz"
+    src: "/home/{{ hadoop_user }}/hadoop-{{ hadoop_version }}.tar.gz"
     dest: /opt/
     group: "{{ hadoop_user }}"
     owner: "{{ hadoop_user }}"
