--- a/roles/hive/defaults/main.yml
+++ b/roles/hive/defaults/main.yml
@@ -10,5 +10,6 @@ hive_home: "/opt/apache-hive-{{ hive_version }}-bin"
 hive_download_url: "http://ftp.cixug.es/apache/hive/hive-{{ hive_version }}/apache-hive-{{ hive_version }}-bin.tar.gz"
 hive_env_vars:
   - { prefix: "export HIVE_HOME", sufix: "={{ hive_home }}" }
+  - { prefix: "export HIVE_CONF_DIR", sufix: "={{ hive_home }}/conf" }
   - { prefix: "export PATH=$PATH:$HIVE_HOME/bin", sufix: ""}
 
