--- a/roles/hive/defaults/main.yml
+++ b/roles/hive/defaults/main.yml
@@ -8,8 +8,8 @@ hive_version: 2.1.1
 hadoop_home: "/opt/hadoop-{{ hadoop_version }}"
 hive_home: "/opt/apache-hive-{{ hive_version }}-bin"
 hive_download_url: "http://ftp.cixug.es/apache/hive/hive-{{ hive_version }}/apache-hive-{{ hive_version }}-bin.tar.gz"
+hive_warehouse_dir: /user/hive/warehouse
 hive_env_vars:
   - { prefix: "export HIVE_HOME", sufix: "={{ hive_home }}" }
   - { prefix: "export HIVE_CONF_DIR", sufix: "={{ hive_home }}/conf" }
   - { prefix: "export PATH=$PATH:$HIVE_HOME/bin", sufix: ""}
-
