--- a/roles/hive/tasks/hive.yml
+++ b/roles/hive/tasks/hive.yml
@@ -48,3 +48,13 @@
   args:
     executable: /bin/bash
 
+# Create directories
+- name: Hive | Create warehouse_dir in HDFS
+  shell: "{{ item }}"
+  become: yes
+  become_user: "{{ hadoop_user }}"
+  args:
+    chdir: "{{ hadoop_home }}/bin"
+  with_items:
+   - "./hdfs dfs -mkdir -p {{ hive_warehouse_dir }}"
+   - "./hdfs dfs -chmod g+w {{ hive_warehouse_dir }}"
