--- a/roles/spark/defaults/main.yml
+++ b/roles/spark/defaults/main.yml
@@ -4,11 +4,11 @@ spark_hosts: [ node1 ]
 
 # Configuration
 hadoop_user: hadoop
+hadoop_home: "/opt/hadoop-{{ hadoop_version }}"
 spark_version: 2.1.1
 hadoop_pre_built: 2.7
-hadoop_home: "/opt/hadoop-{{ hadoop_version }}"
+spark_download_url: "http://apache.rediris.es/spark/spark-2.1.1/spark-{{ spark_version }}-bin-hadoop{{ hadoop_pre_built }}.tgz"
 spark_home: "/opt/spark-{{ spark_version }}-bin-hadoop{{ hadoop_pre_built }}"
-spark_download_url: "http://ftp.cixug.es/apache/spark/spark-2.1.1/spark-{{ spark_version }}-bin-hadoop{{ hadoop_pre_built }}.tgz"
 spark_env_vars:
   - { prefix: "export SPARK_HOME", sufix: "={{ spark_home }}" }
   - { prefix: "export PATH=$PATH:$SPARK_HOME/bin", sufix: ""}
