--- a/roles/hbase/tasks/hbase.yml
+++ b/roles/hbase/tasks/hbase.yml
@@ -7,7 +7,7 @@
 
 - name: HBase | Download hbase
   get_url:
-    url: "{{ hive_download_url }}"
+    url: "{{ hbase_download_url }}"
     dest: /home/{{ hadoop_user }}/
     remote_src: yes
     validate_certs: no
@@ -69,3 +69,15 @@
     insertbefore: BOF
     state: present
   with_items: "{{ hbase_conf_env_vars }}"
+
+- name: HBase | Create hbase-site.xml
+  template:
+    src: hbase-site.xml.j2
+    dest: "{{ hbase_home }}/conf/hbase-site.xml"
+    force: yes
+
+- name: Hadoop | Create regionservers file
+  template:
+    src: regionservers.j2
+    dest: "{{ hbase_home }}/conf/regionservers"
+    force: yes
