--- a/roles/hbase/tasks/main.yml
+++ b/roles/hbase/tasks/main.yml
@@ -1,3 +1,13 @@
 ---
 - include: hbase.yml
-  
+
+- name: HBase | Starting Hbase
+  shell: "{{ item }}"
+  become: yes
+  become_user: "{{ hadoop_user }}"
+  args:
+    chdir: "{{ hbase_home }}/bin"
+  with_items:
+    - "./stop-hbase.sh"
+    - "./start-hbase.sh"
+  when: inventory_hostname == hbase_master_host
