--- a/roles/hbase/defaults/main.yml
+++ b/roles/hbase/defaults/main.yml
@@ -11,7 +11,7 @@ zookeeper_clientport: 2181
 hbase_version: 1.2.5
 hadoop_user: hadoop
 hbase_home: "/opt/hbase-{{ hbase_version }}"
-hbase_download_url: "http://apache.rediris.es/hbase/stable/hbase-{{ hbase_version }}-bin.tar.gz"
+hbase_download_url: "http://ftp.cixug.es/apache/hbase/stable/hbase-{{ hbase_version }}-bin.tar.gz"
 hbase_manages_zk: "false"
 java_home: "/usr/lib/jvm/java-8-oracle/"
 
