--- a/roles/hive/defaults/main.yml
+++ b/roles/hive/defaults/main.yml
@@ -6,7 +6,7 @@ hive_hosts: [ node1 ]
 hadoop_user: hadoop
 hadoop_home: "/opt/hadoop-{{ hadoop_version }}"
 hive_version: 2.1.1
-hive_download_url: "http://apache.rediris.es/hive/stable-2/hive-{{ hive_version }}/apache-hive-{{ hive_version }}-bin.tar.gz"
+hive_download_url: "http://ftp.cixug.es/apache/hive/stable-2/hive-{{ hive_version }}/apache-hive-{{ hive_version }}-bin.tar.gz"
 hive_home: "/opt/apache-hive-{{ hive_version }}-bin"
 hive_warehouse_dir: /user/hive/warehouse
 hive_env_vars:
