--- a/roles/hive/tasks/hive.yml
+++ b/roles/hive/tasks/hive.yml
@@ -21,6 +21,14 @@
     owner: "{{ hadoop_user }}"
     copy: no
 
+- name: Hive | Ensure owner & group 
+  file: 
+    path: "{{ hive_home }}"
+    state: directory
+    group: "{{ hadoop_user }}"
+    owner: "{{ hadoop_user }}"
+    recurse: yes
+
 
 # Set envs variables in ~/.bashrc & profile
 - name: Hive | Remove hadoop env vars
