--- a/roles/zookeeper/tasks/zookeeper.yml
+++ b/roles/zookeeper/tasks/zookeeper.yml
@@ -7,7 +7,7 @@
 
 - name: Zookeper | Download package
   get_url:
-    url: "{{ zookeeper_url }}-{{ zookeeper_version }}.tar.gz"
+    url: "{{ zookeeper_url }}"
     dest: /home/{{ hadoop_user }}/
     remote_src: yes
     validate_certs: no
@@ -17,12 +17,24 @@
   unarchive:
     src: "/home/{{ hadoop_user }}/zookeeper-{{ zookeeper_version }}.tar.gz"
     dest: "/opt/"
+    group: "{{ hadoop_user }}"
+    owner: "{{ hadoop_user }}"
     copy: no
+
+- name: Zookeeper | Ensure owner & group 
+  file: 
+    path: "{{ zookeeper_install_dir }}"
+    state: directory
+    group: "{{ hadoop_user }}"
+    owner: "{{ hadoop_user }}"
+    recurse: yes
 
 - name: Zookeeper | Ensure ZK folder exists
   file:
     path: "{{ item }}"
     state: directory
+    group: "{{ hadoop_user }}"
+    owner: "{{ hadoop_user }}"
   with_items:
     - "{{ zookeeper_datadir }}"
     - "{{ zookeeper_logdir }}"
